--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "lodash": "^3.10.1",
+    "method-override": "^2.3.5",
     "mongoose": "^4.3.4",
     "mongoose-bcrypt": "^1.2.3",
     "morgan": "^1.6.1",
