--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,16 @@
 {
   "name": "filmavatar",
   "version": "1.0.0",
+  "private": true,
   "description": "A web application platform for creating and sharing webTV channels.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./bin/www"
+  },
+  "engines": {
+    "node": "~4.1.1",
+    "npm": "~3.3.4"
   },
   "author": "Andrew A. Anissi",
   "license": "ISC",
@@ -13,7 +19,10 @@
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
     "dotenv": "^1.2.0",
+    "ejs": "~2.3.3",
     "express": "^4.13.3",
+    "jquery": "^2.1.4",
+    "jsonwebtoken": "^5.4.1",
     "lodash": "^3.10.1",
     "method-override": "^2.3.5",
     "mongoose": "^4.3.4",
@@ -21,6 +30,7 @@
     "morgan": "^1.6.1",
     "path": "^0.12.7",
     "request": "^2.67.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "session": "^0.1.0"
   }
 }
