--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "express": "^4.13.3",
     "jquery": "^2.1.4",
     "jsonwebtoken": "^5.4.1",
+    "kerberos": "0.0.17",
     "lodash": "^3.10.1",
     "method-override": "^2.3.5",
+    "mongodb": "^2.1.3",
     "mongoose": "^4.3.4",
     "mongoose-bcrypt": "^1.2.3",
     "morgan": "^1.6.1",
