--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A web application platform for creating and sharing webTV channels.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server/bin/www"
+    "start": "node ./server/bin/www",
+    "postinstall": "bower install"
   },
   "engines": {
     "node": "~4.1.1",
@@ -14,6 +15,7 @@
   "author": "Andrew A. Anissi",
   "license": "ISC",
   "dependencies": {
+    "bower": "0.6.x",
     "angular-sanitize": "^1.4.8",
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.0",
