--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "A web application platform for creating and sharing webTV channels.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server/bin/www",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "start": "node ./server/bin/www"
   },
   "engines": {
     "node": "~4.1.1",
